modificacoes na coluna e menu-mobile outras paginas

--- a/brasil.html
+++ b/brasil.html
@@ -7,6 +7,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Notícias cidade - Seu site de noticias</title>
     <link rel="stylesheet" type="text/css" href="css/estilo.css">
+    <link href="css/fontawesome.min.css" rel="stylesheet" type="text/css" />
+    <link href="css/all.css" rel="stylesheet" type="text/css">
+    <script src="js/jquery.js"></script>
 </head>
 
 <body id="duas-colunas" class="brasil">
@@ -40,8 +43,42 @@
                     <a id="fotos" href="fotos.html">Fotos</a>
                 </li>
             </ul>
+
+
+
+
         </div>
-        <!-- fim /topo -->
+        <!--fim topo-->
+
+        <div class="botao-menu-mobile">
+            <i class="fas fa-bars"></i>
+        </div>
+        <!--menu-mobile-botao-->
+        <ul id="navegacao-mobile">
+            <li class="primeiro">
+                <a id="home" href="index.html">home</a>
+            </li>
+            <li>
+                <a id="brasil" href="brasil.html">Brasil</a>
+            </li>
+            <li>
+                <a id="internacional" href="internacional.html">Internacional</a>
+            </li>
+            <li>
+                <a id="economia" href="economia.html">Economia</a>
+            </li>
+            <li>
+                <a id="saude" href="saude.html">Saúde</a>
+            </li>
+            <li>
+                <a id="ciencia" href="ciencia.html">Ciência</a>
+            </li>
+            <li>
+                <a id="fotos" href="fotos.html">Fotos</a>
+            </li>
+        </ul>
+        <div class="clear"></div>
+
 
         <!-- Início conteudo -->
         <div id="conteudo">
@@ -157,7 +194,7 @@
             &copy; Copyright 2000-2018 Notícias cidade
         </div>
     </div>
-
+    <script src="js/menu.-mobile.js"></script>
 </body>
 
 </html>
