--- a/nova-legislacao.html
+++ b/nova-legislacao.html
@@ -6,7 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Notícias cidade - Seu site de noticias</title>
+
     <link rel="stylesheet" type="text/css" href="css/estilo.css">
+    <link href="css/fontawesome.min.css" rel="stylesheet" type="text/css" />
+    <link href="css/all.css" rel="stylesheet" type="text/css">
+    <script src="js/jquery.js"></script>
 </head>
 
 <body id="uma-coluna" class="brasil">
@@ -89,7 +93,7 @@
             &copy; Copyright 2000-2018 Notícias cidade
         </div>
     </div>
-
+    <script src="js/menu.-mobile.js"></script>
 </body>
 
 </html>
